# DND-AI-toolkit

./: .gitignore  App.py  DB_schema_current.md  Database_schema_plan.md  Main.py  README.md  Roadmap.md  SOP.md  api_key.json  app_settings.py  bugs.md  campaign_manager_app.py  config.py  dnd_toolkit.db  main_menu_app.py  npc_manager_app.py  npc_simulator_app.py  prompts.py  pyproject.toml  requirements.txt  services.py  settings_app.py  supabase_creds.json  ui_components.py  views.py  world_manager_app.py
docs/: DB_schema_current.md  Roadmap.md  SOP.md
old/: Main.py  campaign_manager_app.py  character_manager_app.py  config.py  npc_manager_app.py  npc_simulator_app.py  settings_app.py  ui_components.py  world_manager_app.py
src/: app_settings.py  config.py  main.py  prompts.py  state.py
src/components/: app_bar.py  character_form_dialog.py  new_campaign_dialog.py  new_world_dialog.py  translate_dialog.py  ui_components.py
src/services/: gemini_service.py  supabase_service.py
src/views/: campaigns_view.py  character_form_view.py  characters_view.py  edit_campaign_view.py  edit_world_view.py  login_view.py  main_menu_view.py  main_view.py  new_campaign_view.py  new_world_view.py  settings_view.py  worlds_view.py
