# pyproject.toml

[project]
name = "dnd_ai_toolkit"
version = "1.17.01"
description = "An intelligent Campaign Co-Pilot for Dungeons & Dragons Dungeon Masters."
authors = [
    { name = "YOUR_NAME", email = "your@email.com" },
]
# Ensure this matches your requirements.txt, but only include direct dependencies.
dependencies = [
    "flet>=0.23.2",
    "supabase>=2.5.0",
    "google-genai>=0.7.2",
    "python-dotenv>=1.0.1"
]
requires-python = ">=3.9"

[tool.flet]
# This section configures the Flet build process.
# It tells flet where your main application code is.
path = "src/main.py"

# Add a path to your assets directory so icons are included.
assets_dir = "src/assets"